k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: devopsshack/nodejs-crud-project:06819bb86bfdac76c812f360bdd72118924a5561
        ports:
        - containerPort: 5000
